--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 narwhals==1.35.0
-numpy==1.24.4
+numpy>=1.25.0
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.0.3
